# molpro-plugin

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Doxyfile  Doxyfile.src  FCIdump.cpp  FCIdump.h  FCIdumpF.F90  PluginGuestF_8F90.html  PluginGuestF_8F90__incl.map  PluginGuestF_8F90__incl.md5  PluginGuest_8cpp.html  PluginGuest_8cpp__incl.map  PluginGuest_8cpp__incl.md5  PluginGuest_8h.html  PluginGuest_8h__dep__incl.map  PluginGuest_8h__dep__incl.md5  PluginGuest_8h__incl.map  PluginGuest_8h__incl.md5  PluginGuest_8h_source.html  README.md  README_8md.html  annotated.html  classes.html  classmolpro_1_1PluginGuest-members.html  classmolpro_1_1PluginGuest.html  dir_062eb266b7588e5cd0ae56fabf25dda0.html  dir_190db1ab35189e66178e6465155f29ad.html  dir_2c2f4c65bc17b839fa718352ada4c8dc.html  dir_3a0534501ca4be4079425efd3c8ffab8.html  dir_67b96497efa41a75261f1c64ec2a692a.html  examples.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  index.html  (+9 more)
.github/workflows/: build-and-test.yml
DoxygenTagFiles/: fcidump.tag  molpro-plugin.tag
cmake/: libconfig.cmake
dependencies/: CMakeLists.txt  FCIdump_SHA1
docker/: Dockerfile
example/: CMakeLists.txt  plugin-example-1.cpp  plugin-example-3.cpp
examples/: CMakeLists.txt  PluginHost.cpp  plugin-example-1.cpp  plugin-example-2.F90  plugin-example-3.cpp
lib/: CMakeLists.txt  PluginGuest.cpp  PluginGuest.h  PluginGuestF.F90  libconfig.cmake  molpro_plugin-config.h.in
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  namespaces_0.js  namespaces_1.js  pages_0.js  searchdata.js
src/: CMakeLists.txt
src/molpro/: CMakeLists.txt  PluginGuest.cpp  PluginGuest.h  PluginGuestF.F90
test/: CMakeLists.txt  test-molpro-plugin.cpp
